[metadata]
name = yamlpy
version = attr: yamlpy.__version__
description = Report files opened while executing a command
author = João Pinto
author_email = lamego.pinto@gmail.com
url = https://github.com/joaompinto/yamlpy
license = BSD-3

[options]
zip_safe = False
packages = find:

[versioneer]
VCS = git
style = pep440
versionfile_source = yamlpy/_version.py
versionfile_build = yamlpy/_version.py
tag_prefix =
parentdir_prefix = yamlpy-

[options.entry_points]
console_scripts =
    yamlpy = yamlpy.__main__:main

[bdist_wheel]
universal = 1
